093_lls/grade.txt
Grading at 10/26/2020:03:21:35.918168
For commit ID 181b45d627ce7f9853a66d89878a9b68d0e69453
Grading at Sun Oct 25 23:21:35 EDT 2020
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:94:11:   required from here
ll.h:128:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:94:11:   required from here
ll.h:128:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:0:
ll.h: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:94:11:   required from here
ll.h:128:3: error: no return statement in function returning non-void [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
